# searxNcrawl

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
crawler/: __init__.py  cli.py  config.py  env.py  mcp_server.py  site.py
docs/: overview.md
docs/features/: cli-commands-and-output.md
docs/modules/: crawler-cli.md  crawler-env.md  crawler-mcp-server.md
docs/reviews/: timeout-and-reliability-review.md
docs/usage/: mcp-tools.md  output-formats.md  session-capture.md
plans/links-only-output/: plan.md  todo.md
plans/links-only-output/implementation/: phase-1-impl.md
plans/links-only-output/phases/: phase-1.md
plans/links-only-output/reviews/: impl-plan-review-phase-1.md  plan-review.md
plans/timeout-and-reliability/: plan.md  todo.md
plans/timeout-and-reliability/baseline/: README.md  comparison-after-changes.md  finding-empty-pages.md
plans/timeout-and-reliability/baseline/agno-after-changes/: crawl_results.json
plans/timeout-and-reliability/baseline/agno-baseline.json/: crawl_results.json
plans/timeout-and-reliability/implementation/: phase-1-impl.md  phase-2-impl.md  phase-3-impl.md  phase-4-impl.md  phase-5-impl.md
plans/timeout-and-reliability/phases/: phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
plans/timeout-and-reliability/reviews/: plan-review.md
scripts/: smoke_mcp_client.py
searxng/: settings.yml
tests/: test_cli.py  test_config.py  test_config_loading.py  test_cors.py  test_init.py  test_mcp_client_smoke.py  test_mcp_server.py  test_timeout.py
