[project]
name = "searxNcrawl"
version = "0.24.0"
description = "searxNcrawl web crawler with markdown extraction - no DB, no enrichment, just crawling."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.7.4",
    "tldextract>=5.1.2",
    "playwright>=1.40.0",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
crawl = "crawler.cli:main"
crawl-capture = "crawler.cli:capture_main"
search = "crawler.cli:search_main"
crawl-mcp = "crawler.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["crawler*"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
